--- a/Design/Appolly/css/style.css
+++ b/Design/Appolly/css/style.css
@@ -292,7 +292,7 @@ img[alt="app-store-google"]:hover{
     z-index: 1;
     /* opacity: 0.6; */
     transform: scale(0.6);
-    transform: translate(-40%,10%);
+    transform: translate(-39%,10%);
 }
 .sc-carousel-right-1{
     z-index: 3;
@@ -304,7 +304,7 @@ img[alt="app-store-google"]:hover{
     z-index: 1;
     /* opacity: 0.6; */
     transform: scale(0.6);
-    transform: translate(40%,10%);
+    transform: translate(39%,10%);
 }
 .main-image img{
     margin: 40px 0;
